feat: add links in contacts and fix some bugs

--- a/museum/src/index.html
+++ b/museum/src/index.html
@@ -346,10 +346,10 @@
                     </div>
                     <div class="card_top_content">
                       <label class="card__date">Expiration date</label>
-                      <label class="card__date_field">
+                      <div class="card__date_field">
                         <input type="number" class="date__month" value="03" step="1">
-                        <input type="number" class="date__year" value="2024">
-                      </label>
+                        <input type="number" class="date__year" value="2024" step="1">
+                      </div>
                     </div>
                     <div class="card_top_content">
                       <label>Cardholder name</label>
@@ -387,8 +387,8 @@
             <h4>Musee du Louvre</h4>
             <ul class="contacts__list">
               <li>address: 75001 Paris, France</li>
-              <li>phone: +33(0) 1 40 20 50 50</li>
-              <li>mail: info@louvre.fr</li>
+              <li><a href="tel:+33(0)140205050">phone: +33(0) 1 40 20 50 50</a></li>
+              <li><a href="mailto:info@louvre.fr">mail: info@louvre.fr</a></li>
             </ul>
           </div>
           <img src="./assets/img/contacts_img.png" alt="map" class="contacts_map">
