--- a/museum/src/tour0.html
+++ b/museum/src/tour0.html
@@ -12,11 +12,11 @@
       padding: 0;
     }
     body {
-      width: 100vw;
+      width: 100%;
       height: 100vh;
     }
     iframe {
-      width: 100vw;
+      width: 100%;
       height: 100vh;
     }
   </style>
