--- a/museum-adaptive/src/index.html
+++ b/museum-adaptive/src/index.html
@@ -252,20 +252,85 @@
           <div class="video__container__slider swiper-wrapper" id="video__container__slider">
             <!-- TODO -->
             <!-- don't forget return back -->
-              <div class="video__slide swiper-slide">
-                <iframe src="https://www.youtube.com/embed/aWmJ5DgyWPI" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe>
+              <div class="video__slide swiper-slide" id="video__slide">
+                <a class="video__slide_link" href="https://www.youtube.com/embed/aWmJ5DgyWPI">
+                  <picture>
+                    <source type="image/webp" srcset="https://i.ytimg.com/vi_webp/aWmJ5DgyWPI/maxresdefault.webp">
+                    <img class="video__slide_img" src="https://i.ytimg.com/vi/aWmJ5DgyWPI/maxresdefault.jpg" alt="iframe-pic">
+                  </picture>
+                </a>
+                <button class="video__slide_btn" aria-label="start video">
+                  <svg width="68" height="48" viewBox="0 0 68 48">
+                    <path class="video__button-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path>
+                    <path class="video__button-icon" d="M 45,24 27,14 27,34"></path>
+                  </svg>
+                </button>
+                <div class="video__slide_logo"></div>
+                <!-- <iframe src="https://www.youtube.com/embed/aWmJ5DgyWPI" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
               </div>
-              <div class="video__slide swiper-slide">
-                <iframe src="https://www.youtube.com/embed/Vi5D6FKhRmo" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe>
+              <div class="video__slide swiper-slide"  id="video__slide">
+                <a class="video__slide_link" href="https://www.youtube.com/embed/Vi5D6FKhRmo">
+                  <picture>
+                    <source type="image/webp" srcset="https://i.ytimg.com/vi_webp/Vi5D6FKhRmo/mqdefault.webp">
+                    <img class="video__slide_img" src="https://i.ytimg.com/vi/Vi5D6FKhRmo/mqdefault.jpg" alt="iframe-pic">
+                  </picture>
+                </a>
+                <button class="video__slide_btn" aria-label="start video">
+                  <svg width="68" height="48" viewBox="0 0 68 48">
+                    <path class="video__button-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path>
+                    <path class="video__button-icon" d="M 45,24 27,14 27,34"></path>
+                  </svg>
+                </button>
+                <div class="video__slide_logo"></div>
+                <!-- <iframe src="https://www.youtube.com/embed/Vi5D6FKhRmo" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
               </div>
-              <div class="video__slide swiper-slide">
-                <iframe src="https://www.youtube.com/embed/NOhDysLnTvY" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe>
+              <div class="video__slide swiper-slide"  id="video__slide">
+                <a class="video__slide_link" href="https://www.youtube.com/embed/NOhDysLnTvY">
+                  <picture>
+                    <source type="image/webp" srcset="https://i.ytimg.com/vi_webp/NOhDysLnTvY/maxresdefault.webp">
+                    <img class="video__slide_img" src="https://i.ytimg.com/vi/NOhDysLnTvY/maxresdefault.jpg" alt="iframe-pic">
+                  </picture>
+                </a>
+                <button class="video__slide_btn" aria-label="start video">
+                  <svg width="68" height="48" viewBox="0 0 68 48">
+                    <path class="video__button-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path>
+                    <path class="video__button-icon" d="M 45,24 27,14 27,34"></path>
+                  </svg>
+                </button>
+                <div class="video__slide_logo"></div>
+                <!-- <iframe src="https://www.youtube.com/embed/NOhDysLnTvY" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
               </div>
-              <div class="video__slide swiper-slide">
-                <iframe src="https://www.youtube.com/embed/zp1BXPX8jcU" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe>
+              <div class="video__slide swiper-slide"  id="video__slide">
+                <a class="video__slide_link" href="https://www.youtube.com/embed/zp1BXPX8jcU">
+                  <picture>
+                    <source type="image/webp" srcset="https://i.ytimg.com/vi_webp/zp1BXPX8jcU/maxresdefault.webp">
+                    <img class="video__slide_img" src="https://i.ytimg.com/vi/zp1BXPX8jcU/maxresdefault.jpg" alt="iframe-pic">
+                  </picture>
+                </a>
+                <button class="video__slide_btn" aria-label="start video">
+                  <svg width="68" height="48" viewBox="0 0 68 48">
+                    <path class="video__button-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path>
+                    <path class="video__button-icon" d="M 45,24 27,14 27,34"></path>
+                  </svg>
+                </button>
+                <div class="video__slide_logo"></div>
+                <!-- <iframe src="https://www.youtube.com/embed/zp1BXPX8jcU" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
               </div>
-              <div class="video__slide swiper-slide">
-                <iframe src="https://www.youtube.com/embed/2OR0OCr6uRE" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe>
+              <div class="video__slide swiper-slide"  id="video__slide">
+                <a class="video__slide_link" href="https://www.youtube.com/embed/2OR0OCr6uRE">
+                  <picture>
+                    <source type="image/webp" srcset="https://i.ytimg.com/vi_webp/2OR0OCr6uRE/maxresdefault.webp">
+                    <img class="video__slide_img" src="https://i.ytimg.com/vi/2OR0OCr6uRE/maxresdefault.jpg" alt="iframe-pic">
+                  </picture>
+                </a>
+                <button class="video__slide_btn" aria-label="start video">
+                  <svg width="68" height="48" viewBox="0 0 68 48">
+                    <path class="video__button-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path>
+                    <path class="video__button-icon" d="M 45,24 27,14 27,34"></path>
+                  </svg>
+                </button>
+                <div class="video__slide_logo"></div>
+                <!-- <iframe src="https://www.youtube.com/embed/2OR0OCr6uRE" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
               </div>
           </div>
         </div>
