refactor: add tittle in the iframe

--- a/museum-adaptive/src/index.html
+++ b/museum-adaptive/src/index.html
@@ -266,7 +266,7 @@
                   </svg>
                 </button>
                 <div class="video__slide_logo"></div>
-                <!-- <iframe src="https://www.youtube.com/embed/aWmJ5DgyWPI" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
+                <span class="video__slide_title">Exposition - Le Corps et l’Ame. De Dona...</span>
               </div>
               <div class="video__slide swiper-slide"  id="video__slide">
                 <a class="video__slide_link" href="https://www.youtube.com/embed/Vi5D6FKhRmo">
@@ -282,7 +282,7 @@
                   </svg>
                 </button>
                 <div class="video__slide_logo"></div>
-                <!-- <iframe src="https://www.youtube.com/embed/Vi5D6FKhRmo" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
+                <span class="video__slide_title">Au Louvre ! La Venus de Milo</span>
               </div>
               <div class="video__slide swiper-slide"  id="video__slide">
                 <a class="video__slide_link" href="https://www.youtube.com/embed/NOhDysLnTvY">
@@ -298,7 +298,7 @@
                   </svg>
                 </button>
                 <div class="video__slide_logo"></div>
-                <!-- <iframe src="https://www.youtube.com/embed/NOhDysLnTvY" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
+                <span class="video__slide_title">Promenade dans les collections mesop...</span>
               </div>
               <div class="video__slide swiper-slide"  id="video__slide">
                 <a class="video__slide_link" href="https://www.youtube.com/embed/zp1BXPX8jcU">
@@ -314,7 +314,7 @@
                   </svg>
                 </button>
                 <div class="video__slide_logo"></div>
-                <!-- <iframe src="https://www.youtube.com/embed/zp1BXPX8jcU" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
+                <span class="video__slide_title">Promenade dans les collections mesop...</span>
               </div>
               <div class="video__slide swiper-slide"  id="video__slide">
                 <a class="video__slide_link" href="https://www.youtube.com/embed/2OR0OCr6uRE">
@@ -330,7 +330,7 @@
                   </svg>
                 </button>
                 <div class="video__slide_logo"></div>
-                <!-- <iframe src="https://www.youtube.com/embed/2OR0OCr6uRE" class="slider__iframe" allow='autoplay' loading="lazy" allowfullscreen></iframe> -->
+                <span class="video__slide_title">Promenade dans les collections mesop...</span>
               </div>
           </div>
         </div>
