fix: fix block todo

--- a/momentum/src/index.html
+++ b/momentum/src/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="todo">
       <h4>TODO</h4>
-      <div class="add-task"id="add-task">
+      <div class="add-task" id="add-task">
         <h3 class="heading">Add Item</h3>
         <div class="add-task__new">
           <input id="new-task" class="input-text task new-task" type="text">
@@ -39,7 +39,7 @@
         <li class="layout">
           <input class="input-checkbox" type="checkbox">
           <label class="task">Pay Bills</label>
-          <input class="input-text task type="text">
+          <input class="input-text task" type="text">
           <button class="button edit">Edit</button>
           <button class="button delete-task">Del</button>
         </li>
@@ -48,7 +48,7 @@
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="input-text task">
           <button class="button edit">Save</button>
-          <button class="button delete-task"></button>
+          <button class="button delete-task">Del</button>
         </li>
       </ul>
       <h3 class="heading">Completed</h3>
