--- a/momentum/src/index.html
+++ b/momentum/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="player">
+    <div class="player" id="player">
       <div class="player-controls">
         <button class="play-prev player-icon"></button>
         <button class="play player-icon"></button>
@@ -25,44 +25,19 @@
       </div>
       <ul class="play-list"></ul>
     </div>
-    <div class="todo">
-      <h4>TODO</h4>
-      <div class="add-task" id="add-task">
-        <h3 class="heading">Add Item</h3>
-        <div class="add-task__new">
-          <input id="new-task" class="input-text task new-task" type="text">
-          <button class="button">Add</button>
+    <div class="todo" id="todo">
+      <div class="todo__wrapper">
+        <h2>ToDo List</h2>
+        <div class="task__add">
+          <input type="text" placeholder="Task..." class="input_task" maxlength="25">
+          <span class="btn__add">+</span>
         </div>
+        <ul class="task__list">
+          <!-- <li>review four works</li> -->
+        </ul>
       </div>
-      <h1 class="heading">Todo</h1>
-      <ul class="incomplete-tasks" id="incomplete-tasks">
-        <li class="layout">
-          <input class="input-checkbox" type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input class="input-text task" type="text">
-          <button class="button edit">Edit</button>
-          <button class="button delete-task">Del</button>
-        </li>
-        <li class="layout edit-mode">
-          <input class="input-checkbox" type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="input-text task">
-          <button class="button edit">Save</button>
-          <button class="button delete-task">Del</button>
-        </li>
-      </ul>
-      <h3 class="heading">Completed</h3>
-      <ul class="complete-tasks" id="complete-tasks">
-        <li class="layout">
-          <input class="input-checkbox" type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="input-text task">
-          <button class="button edit">Edit</button>
-          <button class="button delete-task">Del</button>
-        </li>
-      </ul>
     </div>
-    <div class="weather">
+    <div class="weather" id="weather">
       <input type="text" class="city" value="Minsk"/>
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
@@ -79,31 +54,31 @@
       <button class="slide-prev slider-icon"></button>
       <button class="slide-next slider-icon"></button>
     </div>
-    <time class="time"></time>
-    <date class="date"></date>
-    <div class="greeting-container">
+    <time class="time" id="time"></time>
+    <date class="date" id="date"></date>
+    <div class="greeting-container" id="greeting">
       <span class="greeting"></span>
       <input type="text" class="name" placeholder="[Enter name]" value=""/>
     </div>
   </main>
   <footer class="footer">
     <button class="change-quote"></button>
-    <div class="quotes__container">
+    <div class="quotes__container" id="quotes">
       <div class="quote"></div>
       <div class="author"></div>
     </div>
     <div class="setting__menu">
       <div class="setting__lists">
-        <h4>Setting</h4>
+        <h4 class="lan__display">Setting</h4>
         <div class="setting__option language">
-          <p>Language:</p>
+          <p class="lan__display">Language:</p>
           <div class="language__icons">
             <span class="language__icon language__icon_active">en</span>
             <span class="language__icon">ru</span>
           </div>
         </div>
         <div class="setting__option background__source">
-          <p>Source image:</p>
+          <p class="lan__display">Source image:</p>
           <div class="background__icons">
             <span class="bg__icon bg__icon_active">Github</span>
             <span class="bg__icon">Unsplash API</span>
@@ -111,36 +86,39 @@
           </div>
         </div>
         <div class="setting__option tags__name">
-          <p>tags:</p>
-          <input type="text" class="tags__name_input">
+          <p class="lan__display">tags:</p>
+          <input type="text" class="tags__name_input" placeholder="nature">
         </div>
-        <div class="setting__option">
-          <label for="time_vis">Time</label>
-          <input type="checkbox" class="checkbox_vis" name="0" id="time_vis" checked>
-        </div>
-        <div class="setting__option">
-          <label for="date_vis">Date</label>
-          <input type="checkbox" class="checkbox_vis" name="1" id="date_vis" checked>
-        </div>
-        <div class="setting__option">
-          <label for="greeting_vis">Greeting</label>
-          <input type="checkbox" class="checkbox_vis" name="2" id="greeting_vis" checked>
-        </div>
-        <div class="setting__option">
-          <label for="quote_vis">Quote</label>
-          <input type="checkbox" class="checkbox_vis" name="3" id="quote_vis" checked>
-        </div>
-        <div class="setting__option">
-          <label for="weather_vis">Weather</label>
-          <input type="checkbox" class="checkbox_vis" name="4" id="weather_vis" checked>
-        </div>
-        <div class="setting__option">
-          <label for="player_vis">Player</label>
-          <input type="checkbox" class="checkbox_vis" name="5" id="player_vis" checked>
-        </div>
-        <div class="setting__option">
-          <label for="todo_vis">Todo</label>
-          <input type="checkbox" class="checkbox_vis" name="6" id="todo_vis" checked>
+        <div class="setting__display">
+          <p class="lan__display">Display blocks</p>
+          <div class="setting__option">
+            <label class="lan__display" for="time_vis">Time</label>
+            <input type="checkbox" class="checkbox_vis" name="0" id="time_vis" checked>
+          </div>
+          <div class="setting__option">
+            <label class="lan__display" for="date_vis">Date</label>
+            <input type="checkbox" class="checkbox_vis" name="1" id="date_vis" checked>
+          </div>
+          <div class="setting__option">
+            <label class="lan__display" for="greeting_vis">Greeting</label>
+            <input type="checkbox" class="checkbox_vis" name="2" id="greeting_vis" checked>
+          </div>
+          <div class="setting__option">
+            <label class="lan__display" for="quote_vis">Quote</label>
+            <input type="checkbox" class="checkbox_vis" name="3" id="quote_vis" checked>
+          </div>
+          <div class="setting__option">
+            <label class="lan__display" for="weather_vis">Weather</label>
+            <input type="checkbox" class="checkbox_vis" name="4" id="weather_vis" checked>
+          </div>
+          <div class="setting__option">
+            <label class="lan__display" for="player_vis">Player</label>
+            <input type="checkbox" class="checkbox_vis" name="5" id="player_vis" checked>
+          </div>
+          <div class="setting__option">
+            <label class="lan__display" for="todo_vis">ToDo</label>
+            <input type="checkbox" class="checkbox_vis" name="6" id="todo_vis" checked>
+          </div>
         </div>
       </div>
       <button class="setting-icon"></button>
