--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -11,15 +11,15 @@
     <section class="main__page hidden">
         <div class="wrapper wrapper__main">
             <div class="main__header">
-                <button class="set__btn"></button>
+                <a href="/#/setting" class="set__btn"></a>
             </div>
             <div class="main__content">
                 <div class="main__log">
                     <span class="logo"></span>
                 </div>
                 <div class="game__button">
-                    <button class="btn">Artist quiz</button>
-                    <button class="btn">Pictures quiz</button>
+                    <a href="/#/art-game" class="btn">Artist quiz</a>
+                    <a href="/#/pic-game"class="btn">Pictures quiz</a>
                 </div>
             </div>
             <div class="footer">
@@ -36,11 +36,11 @@
     <section class="setting hidden">
         <div class="wrapper wrapper__setting">
             <div class="setting__header">
-                <button class="setting__btn">
+                <a href="/#/" class="setting__btn">
                     <span class="arrow_icon"></span>
                     <span>Setting</span>
-                </button>
-                <button class="close__btn"></button>
+                </a>
+                <a href="/#/" class="close__btn"></a>
             </div>
             <div class="setting__main">
                 <div class="setting__volume">
@@ -91,49 +91,100 @@
                     <span class="logo_color"></span>
                 </div>
                 <nav class="nav">
-										<ul class="nav__list">
-											<li class="nav__link">Home</li>
-											<li class="nav__link active-link">Categories</li>
-											<li class="nav__link">Score</li>
-										</ul>
+					<ul class="nav__list">
+						<li class="nav__link">
+                            <a href="/#/">Home</a>
+                        </li>
+						<li class="nav__link active-link">
+                            <a href="/#/category">Categories</a>
+                        </li>
+						<li class="nav__link">
+                            <a href="/#/score">Score</a>
+                        </li>
+					</ul>
                 </nav>
                 <div class="setting_icon">
                   	<button class="set__btn"></button>
               	</div>
             </div>
             <div class="categories__main">
-								<h3>Categories</h3>
-								<div class="categories__list">
-										<div class="categories__list_inner">
-										</div>
-								</div>
+				<h3>Categories</h3>
+				<div class="categories__list">
+					<div class="categories__list_inner"></div>
+				</div>
             </div>
             <div class="nav__bottom">
                 <ul class="nav__bottom__list">
-                  <li class="bottom__link">
-                    <span class="nav_icon home"></span>
-                    <span class="nav_heading">Home</span>
-                  </li>
-                  <li class="bottom__link active__bottom-link">
-                    <span class="nav_icon category"></span>
-                    <span class="nav_heading">Categories</span>
-                  </li>
-                  <li class="bottom__link">
-                    <span class="nav_icon score"></span>
-                    <span class="nav_heading">Score</span>
-                  </li>
+                    <li class="bottom__link">
+                        <a href="/#/">
+                            <span class="nav_icon home"></span>
+                            <span class="nav_heading">Home</span>
+                        </a>
+                    </li>
+                    <li class="bottom__link active__bottom-link">
+                        <a href="/#/category">
+                            <span class="nav_icon category"></span>
+                            <span class="nav_heading">Categories</span>
+                        </a>
+                    </li>
+                    <li class="bottom__link">
+                        <a href="/#/score">
+                            <span class="nav_icon score"></span>
+                            <span class="nav_heading">Score</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </section>
-    <section class="art-game__page">
-        <div class="wrapper">
+    <section class="art-game__page hidden">
+        <div class="wrapper__game wrapper__art-game">
             <div class="art-game__header">
               <button class="close__btn_game"></button>
               <input type="range" min="1" max="10" step="1" value="1" class="progress__game">
               <div class="art-game__time">1:00</div>
             </div>
             <div class="art-game__main">
+                <div class="game__container">
+
+                </div>
+            </div>
+            <div class="footer">
+                <div class="school__logo">
+                    <a href="https://rs.school/js/" target="_blank" class="rss"></a>
+                </div>
+                <div class="developer">
+                    <a href="https://github.com/Dimas-worker" target="_blank">dimas-worker</a>
+                </div>
+                <div class="create__year">2021</div>
+            </div>
+        </div>
+    </section>
+    <section class="popup__answer hidden">
+        <div class="popup__content">
+            <div class="wrapper__popup">
+                <div class="answer__result">
+                    <span class="icon_tick tick_right"></span>
+                </div>
+                <img src="./assets/img/all-img/0.jpg" alt="0" class="img__popup">
+                <div class="img__description">
+                    <div class="img__name">Girl with a Pearl Earring</div>
+                    <div class="img__author">Johannes Vermeer, 1665</div>
+                </div>
+                <button class="btn__next">Next</button>
+            </div>
+        </div>
+    </section>
+    <section class="popup__end_round hidden">
+        <div class="popup__content">
+            <div class="wrapper__popup">
+                <img src="./assets/icons/popup/end-round-icon.svg" alt="end-round-icon" class="end-round">
+                <div class="congratulation">Congratulations!</div>
+                <div class="total__result">0/10</div>
+                <div class="button__container">
+                    <a href="/#/" class="btn__popup">Home</a>
+                    <a href="/#/category" class="btn__popup">Next Quiz</a>
+                </div>
             </div>
         </div>
     </section>
