feat: add setting-page and fix art-game

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <title>Art Quiz</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
 </head>
@@ -184,6 +185,18 @@
                 <div class="button__container">
                     <a href="/#/" class="btn__popup">Home</a>
                     <a href="/#/category" class="btn__popup">Next Quiz</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="popup__exit hidden">
+        <div class="popup__content">
+            <button class="popup__close">X</button>
+            <div class="wrapper__popup">
+                <div class="congratulation">Do you really want to quit the game?!</div>
+                <div class="button__container">
+                    <button class="btn__popup">Cancel</button>
+                    <a href="/#/" class="btn__popup">Yes</a>
                 </div>
             </div>
         </div>
