--- a/migration-to-typescript/src/index.html
+++ b/migration-to-typescript/src/index.html
@@ -6,44 +6,46 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>NewsPortal</title>
     </head>
-    <body>
-        <header>
-            <h1>News Portal</h1>
-        </header>
-        <main>
-            <div class="sources buttons"></div>
-            <div class="news"></div>
-        </main>
-        <footer>
-            <p class="copyright">
-                Copyright <a href="https://newsapi.org">NewsAPI</a>
-            </p>
-        </footer>
-
-        <template id="sourceItemTemp">
-            <div class="source__item">
-                <span class="source__item-name"></span>
-            </div>
-        </template>
-
-        <template id="newsItemTemp">
-            <div class="news__item">
-                <div class="news__meta">
-                    <div class="news__meta-photo"></div>
-                    <ul class="news__meta-details">
-                        <li class="news__meta-author"></li>
-                        <li class="news__meta-date"></li>
-                    </ul>
+    <body class="body-wrapper">
+            <header class="header">
+                <h1>News Portal</h1>
+                <div class="wrapper__header">
+                    <div class="sources buttons"></div>
+                    <div class="news"></div>
                 </div>
-                <div class="news__description">
-                    <h2 class="news__description-title"></h2>
-                    <h3 class="news__description-source"></h3>
-                    <p class="news__description-content"></p>
-                    <p class="news__read-more">
-                        <a href="#">Read More</a>
-                    </p>
+            </header>
+            <footer class="footer">
+                <div class="school__logo"><a href="https://rs.school/js/" target="_blank" class="rss"></a></div>
+                <p class="copyright">
+                    Copyright <a href="https://newsapi.org">NewsAPI</a>
+                </p>
+                <div class="developer"><a href="https://github.com/Dimas-worker" target="_blank">dimas-worker</a></div>
+            </footer>
+    
+            <template id="sourceItemTemp">
+                <div class="source__item">
+                    <span class="source__item-name"></span>
                 </div>
-            </div>
-        </template>
+            </template>
+    
+            <template id="newsItemTemp">
+                <div class="news__item">
+                    <div class="news__meta">
+                        <div class="news__meta-photo"></div>
+                        <ul class="news__meta-details">
+                            <li class="news__meta-author"></li>
+                            <li class="news__meta-date"></li>
+                        </ul>
+                    </div>
+                    <div class="news__description">
+                        <h2 class="news__description-title"></h2>
+                        <h3 class="news__description-source"></h3>
+                        <p class="news__description-content"></p>
+                        <p class="news__read-more">
+                            <a href="#">Read More</a>
+                        </p>
+                    </div>
+                </div>
+            </template>        
     </body>
 </html>
